--- a/phoneguard/Base.lproj/Main.storyboard
+++ b/phoneguard/Base.lproj/Main.storyboard
@@ -16,6 +16,51 @@
         </array>
     </customFonts>
     <scenes>
+        <!--Root View Controller-->
+        <scene sceneID="6hT-Rz-C5h">
+            <objects>
+                <tableViewController id="lFb-iA-aH2" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="FQK-uV-ztv">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="4zT-mq-2vn">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="4zT-mq-2vn" id="mwR-5r-ce6">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="lFb-iA-aH2" id="eGF-Ac-2u3"/>
+                            <outlet property="delegate" destination="lFb-iA-aH2" id="zn8-K3-vlR"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Root View Controller" id="IEt-TD-h7p"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nLo-SK-NVh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2426" y="-281"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="w7A-wU-hX4">
+            <objects>
+                <navigationController id="mpx-Yf-kD1" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="mKy-gw-X0b">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="lFb-iA-aH2" kind="relationship" relationship="rootViewController" id="AXO-qN-hPr"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="s7P-Gp-yBK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-3378" y="-281"/>
+        </scene>
         <!--Title-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -213,10 +258,10 @@
             </objects>
             <point key="canvasLocation" x="-1023.2" y="-331.48425787106447"/>
         </scene>
-        <!--View Controller-->
+        <!--Lock Screen-->
         <scene sceneID="KNq-qT-dnX">
             <objects>
-                <viewController id="zcb-kT-zAd" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LockScreenViewController" title="Lock Screen" id="zcb-kT-zAd" customClass="LockScreenViewController" customModule="phoneguard" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="xPe-0F-OTc"/>
                         <viewControllerLayoutGuide type="bottom" id="Krw-zp-sLQ"/>
@@ -239,6 +284,9 @@
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <action selector="pwsValueChanged:" destination="zcb-kT-zAd" eventType="valueChanged" id="BCU-8A-tJF"/>
+                                </connections>
                             </textField>
                         </subviews>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
@@ -250,6 +298,10 @@
                             <constraint firstItem="8xa-Hj-Ux0" firstAttribute="centerX" secondItem="dKn-gC-96l" secondAttribute="centerX" id="spH-ZP-Lh2"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="textInput" destination="dKn-gC-96l" id="taL-Tc-3P9"/>
+                        <outlet property="view" destination="KYu-Y5-Wfu" id="hh0-0a-UGj"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aeE-5s-rDH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
